Created a varible that holds an img element and adds it to the page. #4

--- a/driving-game/index.html
+++ b/driving-game/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>JavaScript Driving Game</title>
-    <script src="main.js"></script>
   </head>
   <body>
+    <div class="game-container"></div>
+    <script src="main.js"></script>
   </body>
 </html>
