--- a/driving-game/index.html
+++ b/driving-game/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JavaScript Driving Game</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <div class="game-container"></div>
