Defined additional CSS classes to adjust rotation more precisely, added an html element and track background. #9

--- a/driving-game/index.html
+++ b/driving-game/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
-    <div class="game-container"></div>
+    <div class="game-container">
+    <img src="images/s3.png" class="background-track"/></div>
     <script src="main.js"></script>
   </body>
 </html>
